Fixed on of the margin spacing issues

--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -12,9 +12,12 @@
 #outer-wrapper {
     background: #fff;
     width: 100%;
+    padding: 0px;
+    margin: 0px;
 }
 #wrapper {
     padding: 0px;
+    margin: 0px;
     width: 100%;
 }
 .space #wrapper {
@@ -28,6 +31,8 @@
 }
 #main-content {
     width: 100%;
+    padding: 0px;
+    margin: 0px;
 }
 .release-notes {
     background-color: white;
